--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,4 +2,4 @@ steps:
 - name: 'gcr.io/cloud-builders/mvn'
   args: ['package']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-f', './docker/Dockerfile', '-t', 'gcr.io/fx-fussballtipp-wicket/$REPO_NAME:$BRANCH_NAME', '.']
+  args: ['build', '-t', 'gcr.io/fx-fussballtipp-wicket/$REPO_NAME:$BRANCH_NAME', '.']
