Anpasssung Image-Name im CloudBuild

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,5 +2,5 @@ steps:
 - name: 'gcr.io/cloud-builders/mvn'
   args: ['package']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/fx-fussballtipp-wicket/$REPO_NAME:$BRANCH_NAME', '.']
-images: ['gcr.io/fx-fussballtipp-wicket/$REPO_NAME:$BRANCH_NAME']
+  args: ['build', '-t', 'gcr.io/fx-fussballtipp-wicket/$REPO_NAME:$REVISION_ID', '.']
+images: ['gcr.io/fx-fussballtipp-wicket/$REPO_NAME:$REVISION_ID']
