--- a/pom.xml
+++ b/pom.xml
@@ -35,17 +35,16 @@
 			<artifactId>log4j-core</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.wicket</groupId>
-			<artifactId>wicket-auth-roles</artifactId>
-			<version>8.0.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.wicket</groupId>
-			<artifactId>wicket-datetime</artifactId>
-			<version>8.0.0-SNAPSHOT</version>
-			<type>jar</type>
-		</dependency>
+                <dependency>
+                        <groupId>org.apache.wicket</groupId>
+                        <artifactId>wicket-auth-roles</artifactId>
+                        <version>${wicket.version}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.apache.wicket</groupId>
+                        <artifactId>wicket-datetime</artifactId>
+                        <version>${wicket.version}</version>
+                </dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
@@ -67,13 +66,18 @@
 			<version>1.9.2</version>
 			<scope>compile</scope>
 		</dependency>
-	 <dependency>
-	  <groupId>javax.servlet</groupId>
-	  <artifactId>javax.servlet-api</artifactId>
-	  <version>3.1.0</version>
-	  <type>jar</type>
-	 </dependency>
-	</dependencies>
+                <dependency>
+                        <groupId>javax.servlet</groupId>
+                        <artifactId>javax.servlet-api</artifactId>
+                        <version>3.1.0</version>
+                        <type>jar</type>
+                </dependency>
+                <dependency>
+                        <groupId>joda-time</groupId>
+                        <artifactId>joda-time</artifactId>
+                        <version>2.9.4</version>
+                </dependency>
+        </dependencies>
 	<build>
 		<resources>
 			<resource>
